--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 avatars.dir=./avatars
+
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
+server.port=8080
